--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vite": "^5.4.8"
   },
   "dependencies": {
-    "kaplay": "^3001.0.0-beta.3"
+    "kaplay": "^3001.0.0-beta.3",
+    "platform": "^1.3.6"
   }
 }
